--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore, quis! Mollitia, harum enim id veritatis corporis praesentium magni, expedita eaque eum dolor, officia incidunt facilis esse nesciunt exercitationem ratione magnam.</p>
 
 <span>This is span tag</span>
-
+ 
+<button type="button">Click</button>
 </body>
 </html>
